Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 13.0.0
-
None
-
-
81aed6540 (13.0)
Description
QtCreator crashes in "Kits" tab when klicking on some kits (e.g. Python or some Qt kits) when MesonProjectManager plugin is enabled. Looks like a stack overflow.
It happens on macOS.
Backtrace file is attached.
However on Linux I have a lot of auto-detected System Ninja in `/usr/bin/ninja` in "Meson" configuration (it's like 100 the same entries which cannot be deleted).
Attachments
Issue Links
- mentioned in
-
Page Loading...